--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 ©2hats 2018. All Rights Reserved.
             </div>
             <img anima-show-on-scroll="" anima-src="./img/home-all-background-3.png" class="bp2-allbackground3 bp2-an-animation-enter29 " src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-            <img anima-show-on-scroll="" anima-src="./img/home-clouds 1.png" class="bp2-clouds bp2-an-animation-enter30 " src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+            <img anima-show-on-scroll="" anima-src="./img/home-clouds.png" class="bp2-clouds bp2-an-animation-enter30 " src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
             <img anima-src="./img/home-all-graphics-small.png" class="bp2-allgraphicssmall" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
             <div class="bp2-herotext">
                 <div class="bp2-yourfuturestartsn">
@@ -692,7 +692,7 @@
                     </a>
                 </div>
             </div>
-            <img anima-src="./img/home-path-6.png" class="bp1-path6" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+            <img anima-src="./img/home-path-6.svg" class="bp1-path6" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
             <img anima-src="./img/company-logo.png" class="bp1-logo1" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
             <div class="bp1-group2">
                 <div class="bp1-chatwithususingt">
@@ -720,7 +720,7 @@
                 ©2hats 2018. All Rights Reserved.
             </div>
             <img anima-show-on-scroll="" anima-src="./img/home-all-background-3.png" class="bp1-allbackground3 bp1-an-animation-enter32 " src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-            <img anima-show-on-scroll="" anima-src="./img/home-clouds 1.png" class="bp1-clouds bp1-an-animation-enter33 " src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+            <img anima-show-on-scroll="" anima-src="./img/home-clouds.png" class="bp1-clouds bp1-an-animation-enter33 " src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
             <img anima-src="./img/home-all-graphics-3.png" class="bp1-allgraphics3" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
             <div class="bp1-herotext">
                 <div class="bp1-yourfuturestartsn">
