--- a/terms.html
+++ b/terms.html
@@ -1365,7 +1365,7 @@
                 <br/>
                 End of Page.
             </div>
-            <img anima-src="./img/home-path-6.png" class="bp3-path6" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+            <img anima-src="./img/home-path-6.svg" class="bp3-path6" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
             <img anima-src="./img/company-logo.png" class="bp3-logo" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
             <div class="bp3-group2">
                 <div class="bp3-chatwithususingt">
