--- a/faqstudents.html
+++ b/faqstudents.html
@@ -388,7 +388,7 @@
             <div class="bp3-ihaveanaccountno">
                 I have an account now, what's next?
             </div>
-            <img anima-src="./img/home-path-6.png" class="bp3-path6" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+            <img anima-src="./img/home-path-6.svg" class="bp3-path6" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
             <img anima-src="./img/company-logo.png" class="bp3-logo" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
             <div class="bp3-group2">
                 <div class="bp3-chatwithususingt">
