--- a/privacy.html
+++ b/privacy.html
@@ -685,9 +685,8 @@
             <div class="bp1-a2hats2018allrig">
                 ©2hats 2018. All Rights Reserved.
             </div>
-            <a href="#header">
-                <img anima-src="./img/company-logo.png" class="bp1-logo1" id="None" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-            </a>
+            <img anima-src="./img/company-logo.png" class="bp1-logo1" id="None" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+
             <div class="bp1-header" id="header">
                 <a href="https://app.2hats.com.au/login">
                     <div class="bp1-login">
@@ -1169,5 +1168,22 @@
             }, 200);
         </script>
         <!-- End of Scripts -->
+        <!-- Facebook Pixel Code -->
+        <script>
+            !function(f,b,e,v,n,t,s)
+            {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+            n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+            if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+            n.queue=[];t=b.createElement(e);t.async=!0;
+            t.src=v;s=b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t,s)}(window, document,'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '2178522349094498');
+            fbq('track', 'PageView');
+        </script>
+        <noscript><img height="1" width="1" style="display:none"
+            src="https://www.facebook.com/tr?id=2178522349094498&ev=PageView&noscript=1"
+        /></noscript>
+        <!-- End Facebook Pixel Code -->     
     </body>
 </html>
