added google gtag tracking code (new style google analystics code) to the end of each static file

--- a/company.html
+++ b/company.html
@@ -627,8 +627,9 @@
             <div class="bp2-a2hats2018allrig">
                 ©2hats 2018. All Rights Reserved.
             </div>
-            <img anima-src="./img/company-logo.png" class="bp2-logo1" id="logo1" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-
+            <a href="index.html">
+                <img anima-src="./img/company-logo.png" class="bp2-logo1" id="logo1" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+            </a>
             <div class="bp2-header" id="header">
                 <a href="https://app.2hats.com.au/login">
                     <div class="bp2-login">
@@ -963,8 +964,9 @@
                     Terms &amp; Conditions
                 </div>
             </a>
-            <img anima-src="./img/company-logo.png" class="bp3-logo1" id="logo2" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-
+            <a href="index.html">
+                <img anima-src="./img/company-logo.png" class="bp3-logo1" id="logo2" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+            </a>
             <div class="bp3-header" id="header1">
                 <a href="https://app.2hats.com.au/login">
                     <div class="bp3-login">
@@ -1178,6 +1180,14 @@
             }, 250);
         </script>
         <!-- End of Scripts -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117186252-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-117186252-1');
+        </script>
         <!-- Facebook Chat Code -->
         <div id="fb-root"></div> 
         <script>
@@ -1197,7 +1207,6 @@
             logged_in_greeting="Hi! How can we help you?"        
             logged_out_greeting="Hi! How can we help you?">
         </div>
-        <!-- End Facebook Chat Code -->
         <!-- Facebook Pixel Code -->
         <script>
             !function(f,b,e,v,n,t,s)
@@ -1213,7 +1222,6 @@
         </script>
         <noscript><img height="1" width="1" style="display:none"
         src="https://www.facebook.com/tr?id=2178522349094498&ev=PageView&noscript=1"
-        /></noscript>
-        <!-- End Facebook Pixel Code -->     
+        /></noscript>    
     </body>
 </html>
