--- a/privacy.html
+++ b/privacy.html
@@ -1168,6 +1168,14 @@
             }, 200);
         </script>
         <!-- End of Scripts -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117186252-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-117186252-1');
+        </script>
         <!-- Facebook Pixel Code -->
         <script>
             !function(f,b,e,v,n,t,s)
@@ -1183,7 +1191,6 @@
         </script>
         <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=2178522349094498&ev=PageView&noscript=1"
-        /></noscript>
-        <!-- End Facebook Pixel Code -->     
+        /></noscript>   
     </body>
 </html>
