--- a/faq.html
+++ b/faq.html
@@ -301,6 +301,14 @@
             }, 200);
         </script>
         <!-- End of Scripts -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117186252-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-117186252-1');
+        </script>
         <!-- Facebook Chat Code -->
         <div id="fb-root"></div> 
         <script>
@@ -320,7 +328,6 @@
             logged_in_greeting="Hi! How can we help you?"        
             logged_out_greeting="Hi! How can we help you?">
         </div>
-        <!-- End Facebook Chat Code -->
         <!-- Facebook Pixel Code -->
         <script>
             !function(f,b,e,v,n,t,s)
@@ -336,7 +343,6 @@
         </script>
         <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=2178522349094498&ev=PageView&noscript=1"
-        /></noscript>
-        <!-- End Facebook Pixel Code -->        
+        /></noscript>      
     </body>
 </html>
