--- a/faqstudents.html
+++ b/faqstudents.html
@@ -143,8 +143,9 @@
             <div class="bp2-ihaveanaccountno">
                 I have an account now, what's next?
             </div>
-            <img anima-src="./img/company-logo.png" class="bp2-logo" id="None" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-
+            <a href="index.html">
+                <img anima-src="./img/company-logo.png" class="bp2-logo" id="None" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+            </a>
             <div class="bp2-header" id="header">
                 <a href="https://app.2hats.com.au/login">
                     <div class="bp2-login">
@@ -826,6 +827,14 @@
             }, 200);
         </script>
         <!-- End of Scripts -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117186252-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-117186252-1');
+        </script>
         <!-- Facebook Chat Code -->
         <div id="fb-root"></div> 
         <script>
@@ -846,7 +855,6 @@
             logged_out_greeting="Hi! How can we help you?">
         </div>
         <!-- End Facebook Chat Code -->
-        <!-- Facebook Pixel Code -->
         <script>
             !function(f,b,e,v,n,t,s)
             {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -861,7 +869,6 @@
         </script>
         <noscript><img height="1" width="1" style="display:none"
         src="https://www.facebook.com/tr?id=2178522349094498&ev=PageView&noscript=1"
-        /></noscript>
-        <!-- End Facebook Pixel Code -->             
+        /></noscript>            
     </body>
 </html>
