--- a/index.html
+++ b/index.html
@@ -266,15 +266,8 @@
                     <br/>
                     Starts Now.
                 </div>
-                <div class="bp3-getaheadbutton">
-                    <div class="bp3-emailform">
-                        <div class="bp3-rectangle2">
-                        </div>
-                        <input class="bp3-textyouremail" name="textYourEmail" placeholder="Your Email"/>
-                    </div>
-                    <a href="https://app.2hats.com.au/login">
-                        <img anima-src="./img/home-get-ahead 2@4x.png" class="bp3-getahead" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-                    </a>
+                <div class="bp-getaheadbutton">
+
                 </div>
                 <div class="bp3-kickstartyourprofe">
                     Kickstart your professional career while you’re completing your degree. We offer paid work placements giving you relevant professional experience. Sign up for free below!
@@ -488,15 +481,8 @@
                     <br/>
                     Starts Now.
                 </div>
-                <div class="bp2-getaheadbutton">
-                    <div class="bp2-emailform">
-                        <div class="bp2-rectangle2">
-                        </div>
-                        <input class="bp2-textyouremail" name="textYourEmail" placeholder="Your Email"/>
-                    </div>
-                    <a href="https://app.2hats.com.au/login">
-                        <img anima-src="./img/home-get-ahead@4x.png" class="bp2-getahead" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-                    </a>
+                <div class="bp-getaheadbutton">
+
                 </div>
                 <div class="bp2-kickstartyourprofe">
                     Kickstart your professional career while you’re completing your degree. We offer paid work placements giving you relevant professional experience.
@@ -725,15 +711,8 @@
                     <br/>
                     Starts Now.
                 </div>
-                <div class="bp1-getaheadbutton">
-                    <div class="bp1-emailform">
-                        <div class="bp1-rectangle2">
-                        </div>
-                        <input class="bp1-textyouremail" name="textYourEmail" placeholder="Your Email"/>
-                    </div>
-                    <a href="https://app.2hats.com.au/login">
-                        <img anima-src="./img/home-get-ahead@4x.png" class="bp1-getahead" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-                    </a>
+                <div class="bp-getaheadbutton">
+
                 </div>
                 <div class="bp1-kickstartyourprofe">
                     Kickstart your professional career while you’re completing your degree. We offer paid work placements giving you relevant professional experience.
@@ -997,6 +976,14 @@
             }, 250);
         </script>
         <!-- End of Scripts -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117186252-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-117186252-1');
+        </script>
         <!-- Facebook Chat Code -->
         <div id="fb-root"></div> 
         <script>
@@ -1016,7 +1003,6 @@
             logged_in_greeting="Hi! How can we help you?"        
             logged_out_greeting="Hi! How can we help you?">
         </div>
-        <!-- End Facebook Chat Code -->
         <!-- Facebook Pixel Code -->
         <script>
             !function(f,b,e,v,n,t,s)
@@ -1032,7 +1018,6 @@
         </script>
         <noscript><img height="1" width="1" style="display:none"
         src="https://www.facebook.com/tr?id=2178522349094498&ev=PageView&noscript=1"
-        /></noscript>
-        <!-- End Facebook Pixel Code -->     
+        /></noscript>  
     </body>
 </html>
