--- a/terms.html
+++ b/terms.html
@@ -941,8 +941,9 @@
             <a href="https://www.facebook.com/2hats.com.au/">
                 <img anima-src="./img/terms-facebook-f.png" class="bp2-facebookf" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
             </a>
-            <img anima-src="./img/company-logo.png" class="bp2-logo1" id="None" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-
+            <a href="index.html">
+                <img anima-src="./img/company-logo.png" class="bp2-logo1" id="None" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+            </a>
             <div class="bp2-header" id="header">
                 <a href="https://app.2hats.com.au/login">
                     <div class="bp2-login">
@@ -1554,6 +1555,14 @@
             }, 200);
         </script>
         <!-- End of Scripts -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117186252-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-117186252-1');
+        </script>
         <!-- Facebook Pixel Code -->
         <script>
             !function(f,b,e,v,n,t,s)
@@ -1570,6 +1579,5 @@
         <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=2178522349094498&ev=PageView&noscript=1"
         /></noscript>
-        <!-- End Facebook Pixel Code -->  
     </body>
 </html>
