removed logo link

--- a/faqcompanies.html
+++ b/faqcompanies.html
@@ -416,8 +416,9 @@
             <div class="bp2-why2hats">
                 Why 2hats?
             </div>
-            <img anima-src="./img/company-logo.png" class="bp2-logo" id="None" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-
+            <a href="index.html">
+                <img anima-src="./img/company-logo.png" class="bp2-logo" id="None" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+            </a>
             <div class="bp2-header" id="header">
                 <a href="https://app.2hats.com.au/login">
                     <div class="bp2-login">
