--- a/privacy.html
+++ b/privacy.html
@@ -685,8 +685,9 @@
             <div class="bp1-a2hats2018allrig">
                 ©2hats 2018. All Rights Reserved.
             </div>
-            <img anima-src="./img/company-logo.png" class="bp1-logo1" id="None" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
-
+            <a href="index.html">
+                <img anima-src="./img/company-logo.png" class="bp1-logo1" id="None" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
+            </a>
             <div class="bp1-header" id="header">
                 <a href="https://app.2hats.com.au/login">
                     <div class="bp1-login">
