--- a/faqstudents.html
+++ b/faqstudents.html
@@ -869,6 +869,14 @@
         </script>
         <noscript><img height="1" width="1" style="display:none"
         src="https://www.facebook.com/tr?id=2178522349094498&ev=PageView&noscript=1"
-        /></noscript>            
+        /></noscript>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117186252-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-117186252-1');
+        </script>                 
     </body>
 </html>
