added js to carry email to app.2hats.com.au

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8"/>
         <meta content="user-scalable=0" name="viewport"/>
         <link href="./css/index.css" rel="stylesheet" type="text/css"/>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js">
-        </script> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script> 
+		<script src="js/main.js"></script>
         </meta>
     </head>
     <body style="margin: 0; background: rgba(255, 255, 255, 1.0);">
@@ -272,7 +272,7 @@
                         </div>
                         <input class="bp3-textyouremail" name="textYourEmail" placeholder="Your Email"/>
                     </div>
-                    <a href="https://app.2hats.com.au/signup">
+                    <a href="">
                         <img anima-src="./img/home-get-ahead 2@4x.png" class="bp3-getahead" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                     </a>
                 </div>
@@ -494,7 +494,7 @@
                         </div>
                         <input class="bp2-textyouremail" name="textYourEmail" placeholder="Your Email"/>
                     </div>
-                    <a href="https://app.2hats.com.au/signup">
+                    <a href="">
                         <img anima-src="./img/home-get-ahead@4x.png" class="bp2-getahead" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                     </a>
                 </div>
@@ -731,7 +731,7 @@
                         </div>
                         <input class="bp1-textyouremail" name="textYourEmail" placeholder="Your Email"/>
                     </div>
-                    <a href="https://app.2hats.com.au/signup">
+                    <a href="">
                         <img anima-src="./img/home-get-ahead@4x.png" class="bp1-getahead" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
                     </a>
                 </div>
