removed user-scable=0 for all pages

--- a/faqcompanies.html
+++ b/faqcompanies.html
@@ -3,7 +3,7 @@
     <head>
         <link href="./img/favicon.ico" rel="shortcut icon"/>
         <meta charset="utf-8"/>
-        <meta content="user-scalable=0" name="viewport"/>
+        <meta name="viewport"/>
         <link href="./css/faqcompanies.css" rel="stylesheet" type="text/css"/>
     </head>
     <body style="margin: 0; background: rgba(255, 255, 255, 1.0);">
