--- a/company.html
+++ b/company.html
@@ -3,7 +3,7 @@
     <head>
         <link href="./img/favicon.ico" rel="shortcut icon"/>
         <meta charset="utf-8"/>
-        <meta content="user-scalable=0" name="viewport"/>
+        <meta name="viewport"/>
         <link href="./css/company.css" rel="stylesheet" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js">
         </script>
