--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
     <head>
         <link href="./img/favicon.ico" rel="shortcut icon"/>
         <meta charset="utf-8"/>
-        <meta name="viewport"/>
+        <meta name="viewport" content="width=device-width"/>
         <link href="./css/aboutus.css" rel="stylesheet" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js">
         </script>
