--- a/company.html
+++ b/company.html
@@ -3,13 +3,12 @@
     <head>
         <link href="./img/favicon.ico" rel="shortcut icon"/>
         <meta charset="utf-8"/>
-        <meta name="viewport"/>
+        <meta name="viewport" content="width=device-width"/>
         <link href="./css/company.css" rel="stylesheet" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js">
         </script>
     </head>
-    <body style="margin: 0;
- background: rgba(255, 255, 255, 1.0);">
+    <body style="margin: 0; background: rgba(255, 255, 255, 1.0);">
         <input id="anInput" name="page" type="hidden" value="company"/>
         <div class="bp1-company">
             <img anima-src="./img/company-path-2.svg" class="bp1-path2" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
