--- a/faqstudents.html
+++ b/faqstudents.html
@@ -4,12 +4,12 @@
         <link href="./img/favicon.ico" rel="shortcut icon"/>
         <meta charset="utf-8"/>
         <meta  name="viewport"/>
+		<meta name="google-site-verification" content="7GgY9qc7eORhGGzvariaQXMg157cKzXKpHNvKYNsvuU" />
+		<meta name="msvalidate.01" content="B6B24AC32B88FE61D86DF249D0B08673" />
         <link href="./css/faqstudents.css" rel="stylesheet" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js">
-        </script>
-        <script src="https://animaapp.s3.amazonaws.com/launchpad-static/launchpad.js">
-        </script>
-        <meta content="Launchpad by Anima" name="author">
+        </script> 
+        </script> 
         </meta>
     </head>
     <body style="margin: 0; background: rgba(255, 255, 255, 1.0);">
