--- a/company.html
+++ b/company.html
@@ -4,6 +4,8 @@
         <link href="./img/favicon.ico" rel="shortcut icon"/>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width"/>
+		<meta name="google-site-verification" content="7GgY9qc7eORhGGzvariaQXMg157cKzXKpHNvKYNsvuU" />
+		<meta name="msvalidate.01" content="B6B24AC32B88FE61D86DF249D0B08673" />
         <link href="./css/company.css" rel="stylesheet" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js">
         </script>
