--- a/terms.html
+++ b/terms.html
@@ -4,6 +4,8 @@
         <link href="./img/favicon.ico" rel="shortcut icon"/>
         <meta charset="utf-8"/>
         <meta name="viewport"/>
+		<meta name="google-site-verification" content="7GgY9qc7eORhGGzvariaQXMg157cKzXKpHNvKYNsvuU" />
+		<meta name="msvalidate.01" content="B6B24AC32B88FE61D86DF249D0B08673" />
         <link href="./css/terms.css" rel="stylesheet" type="text/css"/>
     </head>
     <body style="margin: 0; background: rgba(255, 255, 255, 1.0);">
