--- a/faq.html
+++ b/faq.html
@@ -1,369 +1,12 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <link href="./img/favicon.ico" rel="shortcut icon" />
-    <meta charset="utf-8" />
-    <meta name="viewport" />
-    <meta name="google-site-verification" content="7GgY9qc7eORhGGzvariaQXMg157cKzXKpHNvKYNsvuU" />
-    <meta name="msvalidate.01" content="B6B24AC32B88FE61D86DF249D0B08673" />
-    <link href="./css/faq.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>2hats | faq</title>
 </head>
-
-<body style="margin: 0; background: rgba(255, 255, 255, 1.0);">
-    <input id="anInput" name="page" type="hidden" value="faq" />
-    <div class="bp1-faq">
-        <a href="index.html">
-            <img anima-src="./img/company-logo.png" class="bp1-logo" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
-            />
-        </a>
-        <div class="bp1-frequentlyaskedque-layout-container">
-            <div class="bp1-frequentlyaskedque">
-                Frequently Asked Questions
-            </div>
-        </div>
-        <div class="bp1-header">
-            <a href="https://app.2hats.com.au/login">
-                <div class="bp1-login">
-                    <div class="bp1-rectangle">
-                    </div>
-                    <div class="bp1-login1">
-                        Log In
-                    </div>
-                </div>
-            </a>
-            <a href="https://app.2hats.com.au/login">
-                <div class="bp1-signup">
-                    <div class="bp1-rectangle1">
-                    </div>
-                    <div class="bp1-signup1">
-                        Sign Up
-                    </div>
-                </div>
-            </a>
-            <a href="https://blog.2hats.com.au/">
-                <div class="bp1-stories">
-                    Stories &amp; Advice
-                </div>
-            </a>
-            <div class="bp1-faqh">
-                FAQ
-            </div>
-            <a href="aboutus.html">
-                <div class="bp1-aboutus">
-                    About Us
-                </div>
-            </a>
-            <a href="company.html">
-                <div class="bp1-companies">
-                    Companies
-                </div>
-            </a>
-            <a href="index.html">
-                <div class="bp1-students">
-                    Students
-                </div>
-            </a>
-        </div>
-        <a href="faqstudents.html">
-            <div class="bp1-signup2">
-                <div class="bp1-rectangle7">
-                </div>
-                <div class="bp1-forstudents">
-                    For Students
-                </div>
-            </div>
-        </a>
-        <a href="faqcompanies.html">
-            <div class="bp1-signup3">
-                <div class="bp1-rectangle71">
-                </div>
-                <div class="bp1-forcompanies">
-                    For Companies
-                </div>
-            </div>
-        </a>
-    </div>
-    <div class="bp2-faq">
-        <div class="bp2-frequentlyaskedque-layout-container">
-            <div class="bp2-frequentlyaskedque">
-                Frequently Asked Questions
-            </div>
-        </div>
-        <a href="faqstudents.html">
-            <div class="bp2-signup">
-                <div class="bp2-rectangle7">
-                </div>
-                <div class="bp2-forstudents">
-                    For Students
-                </div>
-            </div>
-        </a>
-        <a href="faqcompanies.html">
-            <div class="bp2-signup1">
-                <div class="bp2-rectangle71">
-                </div>
-                <div class="bp2-forcompanies">
-                    For Companies
-                </div>
-            </div>
-        </a>
-        <a href="index.html">
-            <img anima-src="./img/company-logo.png" class="bp2-logo" id="None" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
-            />
-        </a>
-        <div class="bp2-header" id="None">
-            <a href="https://app.2hats.com.au/login">
-                <div class="bp2-login">
-                    <div class="bp2-rectangle">
-                    </div>
-                    <div class="bp2-login1">
-                        Log In
-                    </div>
-                </div>
-            </a>
-            <a href="https://app.2hats.com.au/signup">
-                <div class="bp2-signup2">
-                    <div class="bp2-rectangle1">
-                    </div>
-                    <div class="bp2-signup3">
-                        Sign Up
-                    </div>
-                </div>
-            </a>
-            <a href="https://blog.2hats.com.au/">
-                <div class="bp2-stories">
-                    Stories &amp; Advice
-                </div>
-            </a>
-            <a href="faqstudents.html">
-                <div class="bp2-faq">
-                    FAQ
-                </div>
-            </a>
-            <a href="aboutus.html">
-                <div class="bp2-aboutus">
-                    About Us
-                </div>
-            </a>
-            <a href="company.html">
-                <div class="bp2-companies">
-                    Companies
-                </div>
-            </a>
-            <a href="index.html">
-                <div class="bp2-students">
-                    Students
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="bp3-faq">
-        <div class="bp3-frequentlyaskedque-layout-container">
-            <div class="bp3-frequentlyaskedque">
-                Frequently Asked Questions
-            </div>
-        </div>
-        <div class="bp3-signup-layout-container">
-            <a href="faqstudents.html">
-                <div class="bp3-signup">
-                    <div class="bp3-rectangle7">
-                    </div>
-                    <div class="bp3-forstudents">
-                        For Students
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="bp3-signup1-layout-container">
-            <a href="faqcompanies.html">
-                <div class="bp3-signup1">
-                    <div class="bp3-rectangle71">
-                    </div>
-                    <div class="bp3-forcompanies">
-                        For Companies
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="bp3-header" id="None">
-            <a href="https://app.2hats.com.au/login">
-                <div class="bp3-login">
-                    <div class="bp3-rectangle">
-                    </div>
-                    <div class="bp3-login1">
-                        Log In
-                    </div>
-                </div>
-            </a>
-            <a href="https://app.2hats.com.au/signup">
-                <div class="bp3-signup2">
-                    <div class="bp3-rectangle1">
-                    </div>
-                    <div class="bp3-signup3">
-                        Sign Up
-                    </div>
-                </div>
-            </a>
-            <a href="https://blog.2hats.com.au/">
-                <div class="bp3-stories">
-                    Stories &amp; Advice
-                </div>
-            </a>
-            <div class="bp3-faq">
-                FAQ
-            </div>
-            <a href="aboutus.html">
-                <div class="bp3-aboutus">
-                    About Us
-                </div>
-            </a>
-            <a href="company.html">
-                <div class="bp3-companies">
-                    Companies
-                </div>
-            </a>
-            <a href="index.html">
-                <div class="bp3-students">
-                    Students
-                </div>
-            </a>
-        </div>
-    </div>
-    <!-- Scripts -->
-    <script>
-        anima_isHidden = function (e) {
-            if (!(e instanceof HTMLElement)) return !1;
-            if (getComputedStyle(e).display == "none") return !0;
-            else if (e.parentNode && anima_isHidden(e.parentNode)) return !0;
-            return !1;
-        };
-        anima_loadAsyncSrcForTag = function (tag) {
-            var elements = document.getElementsByTagName(tag);
-            var toLoad = [];
-            for (var i = 0; i < elements.length; i++) {
-                var e = elements[i];
-                var src = e.getAttribute("src");
-                var loaded = (src != undefined && src.length > 0 && src !=
-                    'data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==');
-                if (loaded) continue;
-                var asyncSrc = e.getAttribute("anima-src");
-                if (asyncSrc == undefined || asyncSrc.length == 0) continue;
-                if (anima_isHidden(e)) continue;
-                toLoad.push(e);
-            }
-            toLoad.sort(function (a, b) {
-                return anima_getTop(a) - anima_getTop(b);
-            });
-            for (var i = 0; i < toLoad.length; i++) {
-                var e = toLoad[i];
-                var asyncSrc = e.getAttribute("anima-src");
-                e.setAttribute("src", asyncSrc);
-            }
-        };
-        anima_pauseHiddenVideos = function (tag) {
-            var elements = document.getElementsByTagName("video");
-            for (var i = 0; i < elements.length; i++) {
-                var e = elements[i];
-                var isPlaying = !!(e.currentTime > 0 && !e.paused && !e.ended && e.readyState > 2);
-                var isHidden = anima_isHidden(e);
-                if (!isPlaying && !isHidden && e.getAttribute("autoplay") == "autoplay") {
-                    e.play();
-                } else if (isPlaying && isHidden) {
-                    e.pause();
-                }
-            }
-        };
-        anima_loadAsyncSrc = function (tag) {
-            anima_loadAsyncSrcForTag("img");
-            anima_loadAsyncSrcForTag("iframe");
-            anima_loadAsyncSrcForTag("video");
-            anima_pauseHiddenVideos();
-        };
-        var anima_getTop = function (e) {
-            var top = 0;
-            do {
-                top += e.offsetTop || 0;
-                e = e.offsetParent;
-            } while (e);
-            return top;
-        };
-        anima_loadAsyncSrc();
-        anima_old_onResize = window.onresize;
-        anima_new_onResize = undefined;
-        anima_updateOnResize = function () {
-            if (anima_new_onResize == undefined || window.onresize != anima_new_onResize) {
-                anima_new_onResize = function (x) {
-                    if (anima_old_onResize != undefined) anima_old_onResize(x);
-                    anima_loadAsyncSrc();
-                };
-                window.onresize = anima_new_onResize;
-                setTimeout(function () {
-                    anima_updateOnResize();
-                }, 3000);
-            }
-        };
-        anima_updateOnResize();
-        setTimeout(function () {
-            anima_loadAsyncSrc();
-        }, 200);
-    </script>
-    <!-- End of Scripts -->
-
-    <!-- Facebook Chat Code -->
-    <div id="fb-root"></div>
-    <script>
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s);
-            js.id = id;
-            js.src =
-                'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
-    <div class="fb-customerchat" attribution="setup_tool" page_id="147791982330823" theme_color="#f2573e" logged_in_greeting="Hi! How can we help you?"
-        logged_out_greeting="Hi! How can we help you?">
-    </div>
-    <!-- Facebook Pixel Code -->
-    <script>
-        ! function (f, b, e, v, n, t, s) {
-            if (f.fbq) return;
-            n = f.fbq = function () {
-                n.callMethod ?
-                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-            };
-            if (!f._fbq) f._fbq = n;
-            n.push = n;
-            n.loaded = !0;
-            n.version = '2.0';
-            n.queue = [];
-            t = b.createElement(e);
-            t.async = !0;
-            t.src = v;
-            s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s)
-        }(window, document, 'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '2178522349094498');
-        fbq('track', 'PageView');
-    </script>
-    <noscript>
-        <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=2178522349094498&ev=PageView&noscript=1"
-        />
-    </noscript>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117186252-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'UA-117186252-1');
-    </script>
+<body>
+    
 </body>
-
 </html>
