--- a/faq-companies.html
+++ b/faq-companies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>2hats | home</title>
+    <title>2hats | faq companies</title>
 </head>
 <body>
     
